--- a/Contato/contato.html
+++ b/Contato/contato.html
@@ -20,24 +20,24 @@
             </legend>
 
             <!--primeiro input usado para criar campo de nome completo-->
-            <input type="text" id="nome" name="nome" placeholder="  Nome Completo"><br><br>
+            <input type="text" id="nome" name="nome" placeholder="  Nome Completo" required><br><br>
 
             <!--segundo input usado para criar campo de e-mail-->
-            <input type="email" id="email" name="email" placeholder="  Seu@email.com"><br><br>
+            <input type="email" id="email" name="email" placeholder="  Seu@email.com" required><br><br>
 
             <!--terceiro input usado para criar campo de empresa/organização-->
             <input type="Empresa/organização" id="Empresa/organização" name="Empresa/organização"
                 placeholder="  Empresa/organização"><br><br>
 
+             <!--Quinto input usado para criar campo de tel-->
+            <input type="Tel" id="Tel" name="Tel" placeholder="  Tel"><br><br>
+
             <!--Quarto input usado para criar campo de motivo do contato-->
             <input type="Motivo do contato" id="Motivo do contato" name="Motivo do contato"
                 placeholder="  Motivo do contato"><br><br>
 
-            <!--Quinto input usado para criar campo de tel-->
-            <input type="Tel" id="Tel" name="Tel" placeholder="  Tel"><br><br>
-
             <!--textarea usado para criar campo de mensagem-->
-            <textarea id="mensagem" name="mensagem" rows="4" cols="50" placeholder="  Mensagem"></textarea><br><br>
+            <textarea id="mensagem" name="mensagem" rows="4" cols="50" placeholder="  Mensagem" required></textarea><br><br>
 
            <!--button usado para criar botão de enviar-->
             <button type="submit">Limpar tela</button>
