Modificações feitas em campo de endereço

--- a/CadastroAluno/cadastroaluno.html
+++ b/CadastroAluno/cadastroaluno.html
@@ -36,7 +36,7 @@
             <div>
                 <!--Caixa de endereço-->
                 <label class="fildLabel" for="Endereço">Endereço</label><br><br>
-                <input type="text" id="Endereço" name="Endereço">
+                <input type="text" id="Endereço" name="Endereço" required>
             </div>
             <br><br>
 
