--- a/TelaLogin/telalogin.html
+++ b/TelaLogin/telalogin.html
@@ -12,9 +12,9 @@
     <form>
         <!--label e input utilizados para criar o campo onde podemos preencher o usuário e a senha-->
         <label for="Usuário">Usuário:</label><br>
-        <input type="Usuário" id="Usuário" name="Usuário"><br><br>
+        <input type="Usuário" id="Usuário" name="Usuário" required><br><br>
         <label for="Senha">Senha:</label><br>
-        <input type="Senha" id="Senha" name="Senha"><br><br>
+        <input type="Senha" id="Senha" name="Senha" required><br><br>
         
         <!--Button usado para criar o botão-->
         <button type="submit"> Login</button>
